--- a/stylus/partials/_global.styl
+++ b/stylus/partials/_global.styl
@@ -147,8 +147,9 @@ $ff-body = 'Lato', sans-serif
 	else
 		$base = "#soliloquy-container-"
 		$elem = $base + $id
-		
+
 	{$elem}
 		.soliloquy-slider
 			img
+				width auto
 				max-height $maxHt
